--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,7 +145,8 @@ android {
                                     "weChatAppKey"       : "wx3081bcdae8a842cf",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878"]
+                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "GCM_APP_ID"         : "208964865997"]
         }
         _test1 {
             applicationIdSuffix ".test1"
@@ -159,7 +160,8 @@ android {
                                     "weChatAppKey"       : "wx1b350d7d8d8920ed",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "test1.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878"
+                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "GCM_APP_ID"         : "208964865997"
             ]
         }
         _doby {
@@ -174,7 +176,8 @@ android {
                                     "weChatAppKey"       : "",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878"
+                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "GCM_APP_ID"         : "208964865997"
             ]
         }
         _cell_c {
@@ -189,7 +192,8 @@ android {
                                     "weChatAppKey"       : "",
                                     "sinaAppKey"         : "",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878"
+                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "GCM_APP_ID"         : "208964865997"
             ]
         }
         _yf {
@@ -204,7 +208,8 @@ android {
                                     "weChatAppKey"       : "wx82878b30fc6c0a6d",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "yf.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878"
+                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "GCM_APP_ID"         : "208964865997"
             ]
         }
 //        _ps {
@@ -306,16 +311,16 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
-    compile 'com.cylan.iot.sdk:sdkLib:212'
-//    fileTree(dir: 'libs', include: '**/*.aar')
-//            .each { File file ->
-//        dependencies.add("compile", [
-//                name: file.name.lastIndexOf('.').with {
-//                    it != -1 ? file.name[0..<it] : file.name
-//                },
-//                ext : 'aar'
-//        ])
-//    }
+//    compile 'com.cylan.iot.sdk:sdkLib:212'
+    fileTree(dir: 'libs', include: '**/*.aar')
+            .each { File file ->
+        dependencies.add("compile", [
+                name: file.name.lastIndexOf('.').with {
+                    it != -1 ? file.name[0..<it] : file.name
+                },
+                ext : 'aar'
+        ])
+    }
 
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
