直播页面优化得差不多了

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,7 +139,7 @@ android {
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.hms.update.provider",
-                                    "HW_APP_ID"          : "10515998",
+                                    "HW_APP_ID"          : "\\ 10515998",
                                     "VID"                : "\\ 0001",
                                     "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
                                     "qqAppKey"           : "\\ 1103156296",
@@ -147,10 +147,10 @@ android {
                                     "weChatAppKey"       : "wx3081bcdae8a842cf",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
-                                    "XiaoMiAppId"        : "5241757040488",
+                                    "XiaoMiAppId"        : "\\ 5241757040488",
                                     "XiaoMiAppKey"       : "geNCiqvDm6AohEZ6B+HzJw=="
             ]
         }
@@ -159,7 +159,7 @@ android {
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.test1.hms.update.provider",
-                                    "HW_APP_ID"          : "10865640",
+                                    "HW_APP_ID"          : "\\ 10865640",
                                     "VID"                : "\\ 0001",
                                     "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
                                     "qqAppKey"           : "\\ 1106028314",
@@ -167,7 +167,7 @@ android {
                                     "weChatAppKey"       : "wx1b350d7d8d8920ed",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "test1.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
                                     "XiaoMiAppId"        : "xxx",
@@ -187,10 +187,10 @@ android {
                                     "weChatAppKey"       : "",
                                     "sinaAppKey"         : "\\ 1315129656",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
-                                    "XiaoMiAppId"        : "5361757031486",
+                                    "XiaoMiAppId"        : "\\ 5361757031486",
                                     "XiaoMiAppKey"       : "4+2ItISwz/qBNBIJwaXFQQ=="
             ]
         }
@@ -207,7 +207,7 @@ android {
                                     "weChatAppKey"       : "",
                                     "sinaAppKey"         : "",
                                     "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "1866682200216878",
+                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
                                     "XiaoMiAppId"        : "xxx",
@@ -219,7 +219,7 @@ android {
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.yf.hms.update.provider",
-                                    "HW_APP_ID"          : "10826402",
+                                    "HW_APP_ID"          : "\\ 10826402",
                                     "VID"                : "\\ 0001",
                                     "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
                                     "qqAppKey"           : "\\ 1106028314",
@@ -239,7 +239,7 @@ android {
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.panoview.hms.update.provider",
-                                    "HW_APP_ID"          : "10863475",
+                                    "HW_APP_ID"          : "\\ 10863475",
                                     "VID"                : "\\ 0015",
                                     "VKEY"               : "yzL5ygkRzNkOiUT2a07IxjOJ109AhKF0",
                                     "qqAppKey"           : "",
