客户端版本升级

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -628,7 +628,7 @@
 
         <service
             android:name=".n.engine.FirmwareCheckerService"
-            android:exported="false"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
