--- a/app/build.gradle
+++ b/app/build.gradle
@@ -346,6 +346,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
 }
 
 //谷歌推送
