--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,26 +89,10 @@ android {
     signingConfigs {
         debug {
             v2SigningEnabled false
-            Properties properties = new Properties()
-            File localProperties = project.rootProject.file('local.properties')
-            if (localProperties.exists()) {
-                properties.load(localProperties.newDataInputStream())
-                def store_file = properties.getProperty('store_file')
-                if (store_file != null) {
-                    def store_pwd = properties.getProperty('store_pwd')
-                    def store_alias = properties.getProperty('store_alias')
-                    def store_alias_pwd = properties.getProperty('store_alias_pwd')
-                    storeFile file(store_file)
-                    storePassword store_pwd
-                    keyAlias store_alias
-                    keyPassword store_alias_pwd
-                }
-            } else {
-                storeFile file('../debug.keystore')
-                storePassword 'android'
-                keyAlias 'AndroidDebugKey'
-                keyPassword 'android'
-            }
+            storeFile file('../debug.keystore')
+            storePassword 'android'
+            keyAlias 'AndroidDebugKey'
+            keyPassword 'android'
         }
         release {
             // 满足下面两个条件时需要此配置
@@ -176,7 +160,7 @@ android {
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.hms.update.provider",
-                                    "HW_APP_ID"          : "\\ 10515998",
+                                    "HW_APP_ID"          : "10515998",
                                     "VID"                : "\\ 0001",
                                     "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
                                     "qqAppKey"           : "\\ 1103156296",
