--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,7 @@
             android:value="${HW_APP_ID}" />
         <meta-data
             android:name="BUGLY_APPID"
-            android:value="900026046" />
+            android:value="\\ 900026046" />
         <meta-data
             android:name="vId"
             android:value="${VID}" />
